--- a/examples/basic/static/style.css
+++ b/examples/basic/static/style.css
@@ -6,7 +6,7 @@ html, body {
   height: 100%;
 }
 canvas {
-  width: 100% !important;
-  height: 100% !important;
+  width: 90%;
+  height: 100%;
   background-color: yellowgreen;
 }
